dinoco_tests/tests/dinoco/ui/fail/delete_without_cond.stderr
error[E0609]: no field `execute` on type `dinoco::Delete<User>`
  --> tests/dinoco/ui/fail/delete_without_cond.rs:15:30
   |
15 |     let _ = delete::<User>().execute;
   |                              ^^^^^^^ unknown field
